# django_crypto_auth

./: .gitignore  LICENSE  README.md  admin.py  app_settings.py  apps.py  authentication.py  cryptoAuth.py  helper.py  models.py  pyproject.toml  serializer.py  tests.py  urls.py  views.py
django_crypto_auth/: apps.py  helper.py  models.py  urls.py
management/commands/: createtoken.py
migrations/: 0001_initial.py
